--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 .DS_Store
-.gitignore
-.gitignore.swp
 .vscode/
-stock_analysis/.DS_Store
-stock_analysis/data/
-/stock_analysis.xcodeproj/*
+stock_analysis
