--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_Store
 .vscode/
 stock_analysis
+stock_analysis/stock_analysis.xcodeproj/project.xcworkspace/xcuserdata/ryanelliott.xcuserdatad/UserInterfaceState.xcuserstate
