New functionality to find patterns

--- a/stock_analysis/stock_analysis/Makefile
+++ b/stock_analysis/stock_analysis/Makefile
@@ -1,20 +1,23 @@
 CC = clang++
 CFLAGS = -pedantic -Wall -v -Werror -std=c++11
 BFLAGS = -lsqlite3
-OBJS = analysis.o stock.o data_point.o csv.o
+OBJS = main.o stock.o data_point.o csv.o pattern_detector.o
 MAIN = analysis
 
 analysis : $(OBJS)
-	$(CC) $(OBJS) $(BFLAGS) -o analysis
+	$(CC) $(OBJS) $(BFLAGS) -o $(MAIN)
 
 stock : stock.cpp stock.hpp data_point.hpp
 	$(CC) $(CFLAGS) -c stock.cpp
 
-DataPoint : data_point.cpp data_point.hpp
+data_point : data_point.cpp data_point.hpp
 	$(CC) $(CFLAGS) -c data_point.cpp
 
-CSV : csv.cpp csv.hpp
+csv : csv.cpp csv.hpp
 	$(CC) $(CFLAGS) -c csv.cpp
+
+pattern_detector : pattern_detector.cpp pattern_detector.hpp stock.hpp
+	$(CC) $(CFLAGS) -c pattern_detector.cpp
 	
 clean :
 	rm *.o $(MAIN)
